--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_fullscreen_mouse">FullscreenMouse</string>
 
     <string name="title_activity_touchpad">TouchpadActivity</string>
+    <string name="poweredbyeliasulimanovlogo">poweredByEliaSulimanovLogo</string>
 </resources>
